--- a/artistSPA/baseServercode/package.json
+++ b/artistSPA/baseServercode/package.json
@@ -7,6 +7,7 @@
     "method-override": "2.3.x",
     "morgan": "1.6.x",
     "prerender-node": "^2.0.1",
-    "socket.io": "^1.3.6"
+    "socket.io": "^1.3.6",
+    "mongodb"	: "2.0.x"
   }
 }
